# GiGK_Grafika_Konkuterowa

./: .gitignore  README.md
Lab1/: zad1_figura.html
Lab2/: zad1_figura.html  zad2_drawing.html  zad3_dodatkowe_szachownica.html
Lab3/: 1_img_transforms.py  2_figure.py  przyklad.py
Lab5/: CMakeLists.txt  build_and_run.sh  przyklad.cpp
Lab5/include/: geometry.h  shader.h
Lab5/shaders/: fragShader.frag  vertShader.vert
Lab5/src/: geometry.cpp  main.cpp  shader.cpp
